Python_is_Operator-When_to_use_and_its_strange_behaviour

--- a/Python_Challenges/Python_is_Operator-When_to_use_and_its_strange_behaviour.ipynb
+++ b/Python_Challenges/Python_is_Operator-When_to_use_and_its_strange_behaviour.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Python \"is\" Operator - When to use and its strange behaviour\n",
+    "\n",
+    "## [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=bLhy6oRE_78&list=PLxqBkZuBynVRb0q5KbhNYrnjiFYrypQdy&index=6)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/FdyhpS5.png)](https://www.youtube.com/watch?v=bLhy6oRE_78&list=PLxqBkZuBynVRb0q5KbhNYrnjiFYrypQdy&index=6)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
