adding zero shot learning code

--- a/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
+++ b/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
@@ -6,7 +6,17 @@
    "source": [
     "# Cross Lingual Named Entity Recognition with XLM-Roberta\n",
     "\n",
-    "### In this video, I will fine-tune XLM-R on the German corpus dataset and will see it yields an F1-score of around 85%\n",
+    "## [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=FA5Vf-wuqnA&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=7)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/oOpkFLo.png)](https://www.youtube.com/watch?v=FA5Vf-wuqnA&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=7)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In this Notebook, I will fine-tune XLM-R on the German corpus dataset and will see it yields an F1-score of around 85%\n",
     "\n",
     "### And then without any additional training or fine-tuning I will apply that same model on some other languages in our corpus and in those other languages I will achieve some modest performance.\n",
     "\n",
