updating YT links

--- a/NLP/Fuzzy-String-Matching.ipynb
+++ b/NLP/Fuzzy-String-Matching.ipynb
@@ -269,6 +269,21 @@
     "\n",
     "rapidfuzz.string_metric.hamming(Str5, Str6)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cgi import test\n",
+    "from hashlib import algorithms_available\n",
+    "\n",
+    "\n",
+    "just some test things\n",
+    "\n",
+    "another test and algorithms_available"
+   ]
   }
  ],
  "metadata": {
