--- a/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
+++ b/NLP/Zero_Shot_Learning_multilingual-NER.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Zero Shot Learning - Cross Lingual Named Entity Recognition with XLM-Roberta\n",
     "\n",
-    "## [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=FA5Vf-wuqnA&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=7)\n",
+    "## [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=urMUa4Nw_B8&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=7)\n",
     "\n",
-    "[![Imgur](https://imgur.com/oOpkFLo.png)](https://www.youtube.com/watch?v=FA5Vf-wuqnA&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=7)\n",
+    "[![Imgur](https://imgur.com/oOpkFLo.png)](https://www.youtube.com/watch?v=urMUa4Nw_B8&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=7)\n",
     "\n"
    ]
   },
