updating codes for Cosine Similarity between sentences with Transformers HuggingFace

--- a/NLP/Cosine_Similarity_between_sentences_with_Transformers.ipynb
+++ b/NLP/Cosine_Similarity_between_sentences_with_Transformers.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cosine Similarity calculation between sentences with Transformers"
+    "# Cosine Similarity calculation between sentences with Transformers\n",
+    "\n",
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=fwDTLQDKJTE&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=8)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/mWUzYiE.png)](https://www.youtube.com/watch?v=fwDTLQDKJTE&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=8)\n",
+    "---\n"
    ]
   },
   {
