--- a/NLP/bert-base-uncased-fine-tuned-kaggle-hate-speech-dataset.ipynb
+++ b/NLP/bert-base-uncased-fine-tuned-kaggle-hate-speech-dataset.ipynb
@@ -786,11 +786,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "36cf16204b8548560b1c020c4e8fb5b57f0e4c58016f52f2d4be01e192833930"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 64-bit",
+   "display_name": "Python 3.9.13 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -804,9 +801,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f9f85f796d01129d0dd105a088854619f454435301f6ffec2fea96ecbd9be4ac"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
