completing FinBERT long text

--- a/NLP/FinBERT_Long_Text.ipynb
+++ b/NLP/FinBERT_Long_Text.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## FinBERT Sentiment Analysis for Long Text Corpus (>> 512 tokens)"
+    "# FinBERT Sentiment Analysis for Long Text Corpus (>> 512 tokens)\n",
+    "\n",
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=WEAAs_0etJQ&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=9)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/nPTxGxA.png)](https://www.youtube.com/watch?v=WEAAs_0etJQ&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=9)"
    ]
   },
   {
