completing Fake_News_Classification_with_LSTM_Tensorflow.ipynb

--- a/NLP/Fake_News_Classification_with_LSTM_Tensorflow.ipynb
+++ b/NLP/Fake_News_Classification_with_LSTM_Tensorflow.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fake News Classification with LSTM and Tensorflow\n",
+    "\n",
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=VrJwKdls6d4&list=PLxqBkZuBynVTn2lkHNAcw6lgm1MD5QiMK&index=12)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/jRpFi37.png)](https://www.youtube.com/watch?v=VrJwKdls6d4&list=PLxqBkZuBynVTn2lkHNAcw6lgm1MD5QiMK&index=12)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
