completing Fake_News_Classification_with_LSTM_Tensorflow.ipynb

--- a/NLP/Fake_News_Classification_with_LSTM_Tensorflow.ipynb
+++ b/NLP/Fake_News_Classification_with_LSTM_Tensorflow.ipynb
@@ -12,6 +12,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Link to Dataset](https://www.kaggle.com/datasets/clmentbisaillon/fake-and-real-news-dataset)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
