completing BTC Price Prediction

--- a/Finance_Stock_Crypto_Trading/Bitcoin_Price_Prediction_FBPROPHET_outperform_ARIMAX_XGBOOST_LSTM.ipynb
+++ b/Finance_Stock_Crypto_Trading/Bitcoin_Price_Prediction_FBPROPHET_outperform_ARIMAX_XGBOOST_LSTM.ipynb
@@ -6025,6 +6025,19 @@
     "print(f\"Test RMSE Inverse: {test_RMSE_inverse}\")\n",
     "print(f\"Test MAE Inverse: {test_MAE_inverse}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train RMSE Inverse: 1016.1695287406345\n",
+    "\n",
+    "Train MAE Inverse: 925.4979757121519\n",
+    "\n",
+    "Test RMSE Inverse: 10222.953847536348\n",
+    "\n",
+    "Test MAE Inverse: 5767.259761183345"
+   ]
   }
  ],
  "metadata": {
