completing BTC Price Prediction

--- a/Finance_Stock_Crypto_Trading/Bitcoin_Price_Prediction_FBPROPHET_outperform_ARIMAX_XGBOOST_LSTM.ipynb
+++ b/Finance_Stock_Crypto_Trading/Bitcoin_Price_Prediction_FBPROPHET_outperform_ARIMAX_XGBOOST_LSTM.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bitcoin Prediction - FBPROPHET outperforms ARIMAX, XGBOOST and LSTM"
+    "# Bitcoin Prediction - FB-Prophet outperforms ARIMAX, XGBOOST and LSTM\n",
+    "\n",
+    "<a href=\"https://www.youtube.com/watch?v=0gXeXtL_KjY&list=PLxqBkZuBynVS8mDTc8ZGermXiS-32pR2y&index=16\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my YouTube Video</b></h1></a>\n",
+    "\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/42xv5ii.png)](https://bit.ly/3mXnKGH \"𝗕𝗶𝘁𝗰𝗼𝗶𝗻 𝗣𝗿𝗶𝗰𝗲 𝗣𝗿𝗲𝗱𝗶𝗰𝘁𝗶𝗼𝗻 𝘄𝗶𝘁𝗵 𝗗𝗲𝗲𝗽 𝗟𝗲𝗮𝗿𝗻𝗶𝗻𝗴 𝗟𝗦𝗧𝗠\")\n"
    ]
   },
   {
