--- a/NLP/Decoding_Strategies_for_text_generation/Decoding_Strategies_for_text_generation.ipynb
+++ b/NLP/Decoding_Strategies_for_text_generation/Decoding_Strategies_for_text_generation.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Decoding strategies while generating text with GPT-2"
+    "<a href=\"https://www.youtube.com/watch?v=Ua_ToM-CG5Q&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=11\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my YouTube Video</b></h1></a>\n",
+    "\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/k6tXdtA.png)](https://bit.ly/3mXnKGH \"Decoding strategies while generating text with GPT-2\")"
    ]
   },
   {
