--- a/NLP/Decoding_Strategies_for_text_generation/Decoding_Strategies_for_text_generation.ipynb
+++ b/NLP/Decoding_Strategies_for_text_generation/Decoding_Strategies_for_text_generation.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All of the following functionalities can be used for auto-regressive language generation (here a refresher). In short, auto-regressive language generation is based on the assumption that the probability distribution of a word sequence can be decomposed into the product of conditional next word distributions:\n",
+    "All of the above Decoding methods can be used for auto-regressive language generation (here a refresher). In short, auto-regressive language generation is based on the assumption that the probability distribution of a word sequence can be decomposed into the product of conditional next word distributions:\n",
     "\n",
     "![](assets/2022-09-06-22-16-01.png)"
    ]
