--- a/NLP/Topic_Modeling_with_BERT_and_Automatic_cluster_labeling/Topic_Modeling.ipynb
+++ b/NLP/Topic_Modeling_with_BERT_and_Automatic_cluster_labeling/Topic_Modeling.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://www.youtube.com/watch?v=Ua_ToM-CG5Q&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=11\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my YouTube Video - Topic Modeling with BERT base Sentence transformer Model and implementing Automatic Cluster Labeling</b></h1></a>\n",
+    "<a href=\"https://www.youtube.com/watch?v=SmWbKiueYVU&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=12\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my YouTube Video - Topic Modeling with BERT base Sentence transformer Model and implementing Automatic Cluster Labeling</b></h1></a>\n",
     "\n",
-    "[![IMAGE ALT TEXT](https://imgur.com/5E3UXE4.png)](https://bit.ly/3mXnKGH \"Topic Modeling with BERT base Sentence transformer Model and implementing Automatic Cluster Labeling\")\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/5E3UXE4.png)](https://www.youtube.com/watch?v=SmWbKiueYVU&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=12 \"Topic Modeling with BERT base Sentence transformer Model and implementing Automatic Cluster Labeling\")\n",
     "\n",
     "\n",
     "-----------------\n",
