CODE-DCGAN from Scratch with TensorFlow - Generate fake Faces from CelebA Dataset

--- a/Computer_Vision/DCGAN from Scratch with TensorFlow - Generate fake Faces from CelebA Dataset/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset.ipynb
+++ b/Computer_Vision/DCGAN from Scratch with TensorFlow - Generate fake Faces from CelebA Dataset/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a href=\"https://www.youtube.com/watch?v=csQj1e6Oj38&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=23\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my YouTube Video</b></h1></a>\n",
+        "\n",
+        "[![IMAGE ALT TEXT](https://imgur.com/gx8sRz1.png)](https://www.youtube.com/watch?v=csQj1e6Oj38&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=23 \"Decoding strategies while generating text with GPT-2\")\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
