CODE-DCGAN from Scratch with TensorFlow - Generate fake Faces from CelebA Dataset

--- a/Computer_Vision/DCGAN from Scratch with TensorFlow - Generate fake Faces from CelebA Dataset/DCGAN_Generator_Function_Understanding_Filter_Size_and_Input_Shape.ipynb
+++ b/Computer_Vision/DCGAN from Scratch with TensorFlow - Generate fake Faces from CelebA Dataset/DCGAN_Generator_Function_Understanding_Filter_Size_and_Input_Shape.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://www.youtube.com/watch?v=cFld9T5xZqo&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=4\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my YouTube Video</b></h1></a>\n",
+    "\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/6NxDDIU.png)](https://www.youtube.com/watch?v=cFld9T5xZqo&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=4 \"DCGAN's Generator Function - Understand Filter Size, Input Shape | TensorFlow\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "#### Some Fundamental concepts before fully understanding each step of the Generator() Function implementing the Reverse Convolution (or `Conv2DTranspose`) for the DCGAN.\n",
     "\n",
