Text Summarization - Fine Tuning Pegasus Model for Samsum Dataset

--- a/NLP/Fine_Tuning_Pegasus_for_Text_Summarization.ipynb
+++ b/NLP/Fine_Tuning_Pegasus_for_Text_Summarization.ipynb
@@ -8,9 +8,9 @@
       "source": [
         "---------------------------------\n",
         "\n",
-        "<a href=\"https://www.youtube.com/watch?v=0gXeXtL_KjY&list=PLxqBkZuBynVS8mDTc8ZGermXiS-32pR2y&index=16\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link YouTube Video - Text Summarization - Fine Tuning Pegasus Model for Samsum Dataset</b></h1></a>\n",
+        "<a href=\"https://www.youtube.com/watch?v=fLqiPks4neU&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=15\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link YouTube Video - Text Summarization - Fine Tuning Pegasus Model for Samsum Dataset</b></h1></a>\n",
         "\n",
-        "[![IMAGE ALT TEXT](https://imgur.com/42xv5ii.png)](https://bit.ly/3mXnKGH \"\")\n",
+        "[![IMAGE ALT TEXT](https://imgur.com/v4PUe7C.png)](https://bit.ly/3mXnKGH \"\")\n",
         "\n",
         "## [samsum Dataset](https://huggingface.co/datasets/samsum)"
       ]
