Fine Tuning BERT for Named Entity Recognition

--- a/NLP/YT_Fine_tuning_BERT_NER_v1.ipynb
+++ b/NLP/YT_Fine_tuning_BERT_NER_v1.ipynb
@@ -1,6 +1,20 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---------------------------------\n",
+        "\n",
+        "<a href=\"https://www.youtube.com/watch?v=dzyDHMycx_c&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=18\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link YouTube Video - Fine Tuning BERT for Named Entity Recognition (NER) | NLP</b></h1></a>\n",
+        "\n",
+        "[![IMAGE ALT TEXT](https://imgur.com/O7UNR3C.png)](https://bit.ly/3mXnKGH \"\")\n",
+        "\n",
+        "\n",
+        "## [Dataset in HuggingFace](https://huggingface.co/datasets/conll2003)"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
