YT_LDA_Topic_Modeling

--- a/NLP/Topic_Modeling_with_LDA.ipynb
+++ b/NLP/Topic_Modeling_with_LDA.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://www.youtube.com/watch?v=iCL1TmRQ0sk&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=19\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link YouTube Video - LDA for Topic Modeling</b></h1></a>\n",
+    "\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/ZFLzcw9.png)](https://www.youtube.com/watch?v=iCL1TmRQ0sk&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=19 \"\")\n",
+    "\n",
+    "---------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Some of the well known topic modelling techniques are\n",
     "\n",
     "* Latent Semantic Analysis (LSA)\n",
@@ -12,8 +23,6 @@
     "* Correlated Topic Model (CTM)\n",
     "\n",
     "In this video, we will do LDA\n",
-    "\n",
-    "# LDA for Topic Modeling\n",
     "\n",
     "Topic modeling is a type of statistical modeling for discovering the abstract “topics” that occur in a collection of documents. Latent Dirichlet Allocation (LDA) is an example of topic model and is used to classify text in a document to a particular topic. It builds a topic per document model and words per topic model, modeled as Dirichlet distributions.\n",
     "\n",
