YT_LDA_Topic_Modeling

--- a/NLP/Topic_Modeling_with_LDA.ipynb
+++ b/NLP/Topic_Modeling_with_LDA.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://www.youtube.com/watch?v=iCL1TmRQ0sk&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=19\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link YouTube Video - LDA for Topic Modeling</b></h1></a>\n",
+    "<a href=\"https://www.youtube.com/watch?v=vrDdnQfav0s&list=PLxqBkZuBynVTn2lkHNAcw6lgm1MD5QiMK&index=21\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link YouTube Video - LDA for Topic Modeling</b></h1></a>\n",
     "\n",
-    "[![IMAGE ALT TEXT](https://imgur.com/ZFLzcw9.png)](https://www.youtube.com/watch?v=iCL1TmRQ0sk&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=19 \"\")\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/yXOAaIY.png)](https://www.youtube.com/watch?v=vrDdnQfav0s&list=PLxqBkZuBynVTn2lkHNAcw6lgm1MD5QiMK&index=21 \"\")\n",
     "\n",
     "---------------------------"
    ]
