--- a/NLP/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions.ipynb
+++ b/NLP/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions.ipynb
@@ -1,6 +1,17 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a href=\"https://www.youtube.com/watch?v=CwLPglxw1WA&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=23\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link YouTube Video - Understanding BERT Embeddings and Tokenization </b></h1></a>\n",
+        "\n",
+        "[![IMAGE ALT TEXT](https://imgur.com/px2aQbB.png)](https://www.youtube.com/watch?v=CwLPglxw1WA&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=23)\n",
+        "\n",
+        "---\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
