Fine Tuning HuggingFace Transformer BERT for Yelp customer review prediction

--- a/NLP/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions.ipynb
+++ b/NLP/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions.ipynb
@@ -179,11 +179,7 @@
       },
       "outputs": [],
       "source": [
-        "# csv_file_path = '../input/yelp.csv' #local machine\n",
-        "\n",
-        "csv_file_path = '/content/drive/MyDrive/YT-Datasets/Yelp-Review-Transformers-Deep_Dive-BOOK/yelp.csv' # G-Drive\n",
-        "\n",
-        "# csv_file_path = '/kaggle/input/yelp-reviews-dataset/yelp.csv'\n"
+        "csv_file_path = '../input/yelp.csv' #local machine"
       ]
     },
     {
