Fine Tuning HuggingFace Transformer BERT for Yelp customer review prediction

--- a/NLP/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions.ipynb
+++ b/NLP/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions.ipynb
@@ -959,7 +959,7 @@
         }
       ],
       "source": [
-        "sample_txt = 'When was I last outside? I am stuck at home for 2 weeks.'\n",
+        "sample_txt = 'Text Processing with Machine Learning is moving at a rapid speed'\n",
         "\n",
         "tokens = tokenizer.tokenize(sample_txt)\n",
         "\n",
