Fine Tuning HuggingFace Transformer BERT for Yelp customer review prediction

--- a/NLP/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions.ipynb
+++ b/NLP/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions/Fine_Tuning_HuggingFace_Transformer_BERT_Yelp_Customer_Review_Predictions.ipynb
@@ -377,6 +377,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Need to make the customer stars starting from 0 instead of 1 - Otherwise  got error - `CUDA runtime error (59) : device-side assert triggered`\n",
+        "\n",
+        "https://stackoverflow.com/a/55272357/1902852\n",
+        "\n",
+        "This is usually an indexing issue.\n",
+        "\n",
+        "For example, if your ground truth label starts at 1:\n",
+        "\n",
+        "target = [1,2,3,4,5]\n",
+        "\n",
+        "\n",
+        "Then you should subtract 1 for every label instead so that:\n",
+        "\n",
+        "target = [0,1,2,3,4]\n",
+        "--------------------------"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 8,
       "metadata": {
@@ -393,7 +414,7 @@
       "outputs": [],
       "source": [
         "\n",
-        "# Map sentiment scores to categories\n",
+        "# Make the customer stars starting from 0 instead of 1\n",
         "def map_sentiment_scores(star_number):\n",
         "    star_number = int(star_number)\n",
         "    if star_number == 1:\n",
@@ -745,42 +766,6 @@
         "ax = sns.countplot(df.stars)\n",
         "plt.xlabel('review stars')\n",
         "ax.set_xticklabels(class_names)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ozl-Qw6AERNm"
-      },
-      "source": [
-        "## Got Error - `CUDA runtime error (59) : device-side assert triggered`\n",
-        "\n",
-        "https://stackoverflow.com/a/55272357/1902852\n",
-        "\n",
-        "This is usually an indexing issue.\n",
-        "\n",
-        "For example, if your ground truth label starts at 1:\n",
-        "\n",
-        "target = [1,2,3,4,5]\n",
-        "\n",
-        "\n",
-        "Then you should subtract 1 for every label instead so that:\n",
-        "\n",
-        "target = [0,1,2,3,4]\n",
-        "\n",
-        "### Further possible source of the Problem\n",
-        "\n",
-        "https://builtin.com/software-engineering-perspectives/cuda-error-device-side-assert-triggered\n",
-        "\n",
-        "\n",
-        "### INCONSISTENCY BETWEEN THE NUMBER OF LABELS AND OUTPUT UNITS\n",
-        "\n",
-        "\n",
-        "### WRONG INPUT FOR THE LOSS FUNCTION\n",
-        "\n",
-        "Loss functions have different ranges for the possible inputs that they can accept. If you choose an incompatible activation function for your output layer, it will trigger this error. For example, BCELoss()requires its input to be between zero and one. If the input (output from your model) is beyond the acceptable range for that particular loss function, the error will get triggered.\n",
-        "\n",
-        "--------------------------"
       ]
     },
     {
