--- a/NLP/zero_shot_multilingual_sentiment_classification_with_USEm/zero_shot_multilingual_sentiment_classification_with_USEm.ipynb
+++ b/NLP/zero_shot_multilingual_sentiment_classification_with_USEm/zero_shot_multilingual_sentiment_classification_with_USEm.ipynb
@@ -2,6 +2,19 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a href=\"https://www.youtube.com/watch?v=tvdIF1FU7fg&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=24\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Zero Shot Multilingual Sentiment Classification with PyTorch Lightning | NLP </b></h1></a>\n",
+        "\n",
+        "[![IMAGE ALT TEXT](https://imgur.com/wqKxWJj.png)](https://www.youtube.com/watch?v=tvdIF1FU7fg&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=24)\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### [Dataset Link](https://huggingface.co/datasets/yelp_polarity)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "7H8im7owr-f6"
       },
