--- a/NLP/bert-base-uncased-fine-tuned-kaggle-hate-speech-dataset.ipynb
+++ b/NLP/bert-base-uncased-fine-tuned-kaggle-hate-speech-dataset.ipynb
@@ -15,6 +15,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First What is BERT?\n",
+    "\n",
+    "BERT stands for Bidirectional Encoder Representations from Transformers. The name itself gives us several clues to what BERT is all about.\n",
+    "\n",
+    "BERT architecture consists of several Transformer encoders stacked together. Each Transformer encoder encapsulates two sub-layers: a self-attention layer and a feed-forward layer.\n",
+    "\n",
+    "### There are two different BERT models:\n",
+    "\n",
+    "- BERT base, which is a BERT model consists of 12 layers of Transformer encoder, 12 attention heads, 768 hidden size, and 110M parameters.\n",
+    "\n",
+    "- BERT large, which is a BERT model consists of 24 layers of Transformer encoder,16 attention heads, 1024 hidden size, and 340 parameters.\n",
+    "\n",
+    "\n",
+    "\n",
+    "BERT Input and Output\n",
+    "BERT model expects a sequence of tokens (words) as an input. In each sequence of tokens, there are two special tokens that BERT would expect as an input:\n",
+    "\n",
+    "- [CLS]: This is the first token of every sequence, which stands for classification token.\n",
+    "- [SEP]: This is the token that makes BERT know which token belongs to which sequence. This special token is mainly important for a next sentence prediction task or question-answering task. If we only have one sequence, then this token will be appended to the end of the sequence.\n",
+    "\n",
+    "\n",
+    "It is also important to note that the maximum size of tokens that can be fed into BERT model is 512. If the tokens in a sequence are less than 512, we can use padding to fill the unused token slots with [PAD] token. If the tokens in a sequence are longer than 512, then we need to do a truncation.\n",
+    "\n",
+    "And that’s all that BERT expects as input.\n",
+    "\n",
+    "BERT model then will output an embedding vector of size 768 in each of the tokens. We can use these vectors as an input for different kinds of NLP applications, whether it is text classification, next sentence prediction, Named-Entity-Recognition (NER), or question-answering.\n",
+    "\n",
+    "\n",
+    "------------\n",
+    "\n",
+    "**For a text classification task**, we focus our attention on the embedding vector output from the special [CLS] token. This means that we’re going to use the embedding vector of size 768 from [CLS] token as an input for our classifier, which then will output a vector of size the number of classes in our classification task.\n",
+    "\n",
+    "-----------------------\n",
+    "\n",
+    "![Imgur](https://imgur.com/NpeB9vb.png)\n",
+    "\n",
+    "-------------------------"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
