updating YT links for CS GRU Prediction

--- a/Finance_Stock_Crypto_Trading/Credit_Suisse_Price_Prediction_with_GRU/yfinance_pulling_data_by_ticker_general.ipynb
+++ b/Finance_Stock_Crypto_Trading/Credit_Suisse_Price_Prediction_with_GRU/yfinance_pulling_data_by_ticker_general.ipynb
@@ -1,6 +1,15 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a href=\"https://www.youtube.com/watch?v=p_6kULimQvI&list=PLxqBkZuBynVR0Tw4dRwhpBcVBwePdLv8y&index=6\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my YouTube Video - Credit Suisse Stock Price Prediction with Time Series & GRU</b></h1></a>\n",
+        "\n",
+        "[![IMAGE ALT TEXT](https://imgur.com/sk49iMY.png)](https://www.youtube.com/watch?v=p_6kULimQvI&list=PLxqBkZuBynVR0Tw4dRwhpBcVBwePdLv8y&index=6)\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
