--- a/NLP/Longformer end to end with Kaggle NLP competition/Longformer.ipynb
+++ b/NLP/Longformer end to end with Kaggle NLP competition/Longformer.ipynb
@@ -16,7 +16,9 @@
     "\n",
     "---------------------\n",
     "\n",
-    "### [Kaggle - Feedback Prize - Evaluating Student Writing](https://www.kaggle.com/competitions/feedback-prize-2021)"
+    "## [Kaggle - Feedback Prize - Evaluating Student Writing](https://www.kaggle.com/competitions/feedback-prize-2021)\n",
+    "\n",
+    "### You can run this Notebook either Locally or in Kaggle - Just modify the 'ROOT_DIR' variable to properly refer to the dataset"
    ]
   },
   {
@@ -255,11 +257,10 @@
    "source": [
     "\n",
     "# set number of gpus you wish to use. \n",
-    "# kaggle only has 1, but offline, you can use more\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\" #0,1,2,3 for four gpu\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\" #0,1 for 2 gpus if you are using Kaggle's 2 GPUs\n",
     "\n",
-    "# ROOT_DIR = '../input/feedback-prize-2021/' # Kaggle\n",
-    "ROOT_DIR = '../input/' # local\n",
+    "# ROOT_DIR = '../input/feedback-prize-2021/' # Directory when running in Kaggle\n",
+    "ROOT_DIR = '../input/' # local machine's directory \n",
     "\n",
     "MODEL_NAME = 'allenai/longformer-base-4096'"
    ]
@@ -3236,14 +3237,12 @@
    },
    "outputs": [],
    "source": [
-    "EPOCHS = 1\n",
+    "EPOCHS = 4\n",
     "BATCH_SIZE = 2\n",
     "\n",
-    "# Final LR for running the NB in Kaggle Kernel\n",
-    "# LRS = [0.25e-4, 0.25e-4, 0.25e-4, 0.25e-4, 0.25e-5]\n",
-    "\n",
-    "# Below I am setting only for running the entire NB super fast\n",
-    "LRS = [.01, .02]\n",
+    "# Below learning rates, I am setting only for running the entire NB fast\n",
+    "# For better result, you should experiement with even lower learning rates\n",
+    "LRS = [.0001, .0002]\n",
     "\n",
     "def learning_func(epoch):\n",
     "    return LRS[epoch]\n",
@@ -3277,7 +3276,7 @@
     }
    ],
    "source": [
-    "# TRAIN VALID SPLIT 90% 10%\n",
+    "# Split the data with train (90%) and valid(10%)\n",
     "np.random.seed(42)\n",
     "train_idx = np.random.choice(np.arange(len(unique_doc_ids)),int(0.9*len(unique_doc_ids)),replace=False)\n",
     "\n",
