--- a/Time-Series/XGBoost_for_TIme_Series_Forecast_Energy_Consumption_with_Machine-Learning/Time-series_with_XGB_hourly_energy_consumption.ipynb
+++ b/Time-Series/XGBoost_for_TIme_Series_Forecast_Energy_Consumption_with_Machine-Learning/Time-series_with_XGB_hourly_energy_consumption.ipynb
@@ -3,6 +3,17 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "c4bd1947",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://www.youtube.com/watch?v=K_9G29R01kw&list=PLxqBkZuBynVS8mDTc8ZGermXiS-32pR2y&index=34&ab_channel=Rohan-Paul-AI\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link YouTube Video - XGBoost for TIme Series | Forecast Energy Consumption with Machine-Learning </b></h1></a>\n",
+    "\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/9Rdm4fd.png)](https://www.youtube.com/watch?v=K_9G29R01kw&list=PLxqBkZuBynVS8mDTc8ZGermXiS-32pR2y&index=34&ab_channel=Rohan-Paul-AI)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "8bf63c66",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -17,7 +28,7 @@
     "tags": []
    },
    "source": [
-    "# Time Series with XGBoost\n",
+    "--------------\n",
     "\n",
     "## [Data Source](https://github.com/rohan-paul/YT_Data_Sources/blob/main/TimeSeries/hourly_energy_consumption_pjm_est/PJME_hourly.csv)\n",
     "\n",
@@ -91,7 +102,7 @@
    "outputs": [],
    "source": [
     "ROOT_DIR = '../input/'\n",
-    "TARGET_TEST_CUTOFF_DATE = '01-01-2015'\n"
+    "TARGET_TEST_CUTOFF_DATE = '01-01-2016'\n"
    ]
   },
   {
