--- a/Time-Series/XGBoost_for_TIme_Series_Forecast_Energy_Consumption_with_Machine-Learning/Time-series_with_XGB_hourly_energy_consumption.ipynb
+++ b/Time-Series/XGBoost_for_TIme_Series_Forecast_Energy_Consumption_with_Machine-Learning/Time-series_with_XGB_hourly_energy_consumption.ipynb
@@ -42,9 +42,7 @@
     "\n",
     "---------------\n",
     "\n",
-    "In this video, we will try to solve a time series problem using XGBoost.\n",
-    "\n",
-    "The business problem here is forecasting of Electricity Demand or Energy Demand\n",
+    "### The business problem here is forecasting of Electricity Demand or Energy Demand\n",
     "\n",
     "Load forecasting is a technique used by the energy-providing utility to predict the electrical power needed to meet the demand and supply equilibrium1. The technique can provide a reference for the daily operation of regional power grids and the formulation of dispatching plans. According to the results of power load forecasting, dispatchers can reasonably coordinate the distribution of the output of each power plant, maintain a balance between supply and demand, and ensure power grid stability. This determines the start-stop arrangement of the generator set, reduces the redundant generator reserve capacity value, and reduces the power generation cost.\n",
     "\n",
