--- a/Time-Series/FB Prophet-Analyze-Holidays/Prophet_Analyze_Holidays.ipynb
+++ b/Time-Series/FB Prophet-Analyze-Holidays/Prophet_Analyze_Holidays.ipynb
@@ -6,7 +6,10 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Divvy has made its Data Open sourced [here](https://divvy-tripdata.s3.amazonaws.com/index.html)"
+    "### Divvy has made its Data Open sourced [here](https://divvy-tripdata.s3.amazonaws.com/index.html)\n",
+    "\n",
+    "\n",
+    "## The [data for this specific exercise](https://github.com/rohan-paul/YT_Data_Sources/tree/main/TimeSeries/FB%20Prophet%20-%20Analyze%20How%20Holidays%20affect%20a%20Time%20Series%20Forecast)"
    ]
   },
   {
