--- a/Finance_Stock_Crypto_Trading/Bitcoin Price Prediction with FB Prophet.ipynb
+++ b/Finance_Stock_Crypto_Trading/Bitcoin Price Prediction with FB Prophet.ipynb
@@ -5,6 +5,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://www.youtube.com/watch?v=da5GNkAZO54&list=PLxqBkZuBynVS8mDTc8ZGermXiS-32pR2y&index=37&ab_channel=Rohan-Paul-AI\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link YouTube Video - Bitcoin Price Prediction with FB Prophet | Time Series with Machine Learning </b></h1></a>\n",
+    "\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/OVL66Xu.png)](https://www.youtube.com/watch?v=da5GNkAZO54&list=PLxqBkZuBynVS8mDTc8ZGermXiS-32pR2y&index=37&ab_channel=Rohan-Paul-AI)\n",
+    "\n",
+    "\n",
+    "-------------------------"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## [Dataset source](https://www.kaggle.com/datasets/sudalairajkumar/cryptocurrency-historical-prices-coingecko?select=bitcoin.csv)"
    ]
   },
