--- a/Finance_Stock_Crypto_Trading/Crypto_with_MachineLearning/Feature Engineering for Bitcoin Time Series and Price Prediction with XGBoost/G_Crypto_Kaggle_Feature Engineering_Time_Series_XGBoost.ipynb
+++ b/Finance_Stock_Crypto_Trading/Crypto_with_MachineLearning/Feature Engineering for Bitcoin Time Series and Price Prediction with XGBoost/G_Crypto_Kaggle_Feature Engineering_Time_Series_XGBoost.ipynb
@@ -11,7 +11,9 @@
     "[![IMAGE ALT TEXT](https://imgur.com/f69J9EO.png)](https://www.youtube.com/watch?v=mUYXhzVrDF8&list=PLxqBkZuBynVS8mDTc8ZGermXiS-32pR2y&index=38&ab_channel=Rohan-Paul-AI)\n",
     "\n",
     "\n",
-    "-------------------------"
+    "-------------------------\n",
+    "\n",
+    "## [The data in Kaggle](https://www.kaggle.com/competitions/g-research-crypto-forecasting/overview)"
    ]
   },
   {
