--- a/Finance_Stock_Crypto_Trading/Crypto_with_MachineLearning/Feature Engineering for Bitcoin Time Series and Price Prediction with XGBoost/G_Crypto_Kaggle_Feature Engineering_Time_Series_XGBoost.ipynb
+++ b/Finance_Stock_Crypto_Trading/Crypto_with_MachineLearning/Feature Engineering for Bitcoin Time Series and Price Prediction with XGBoost/G_Crypto_Kaggle_Feature Engineering_Time_Series_XGBoost.ipynb
@@ -22,7 +22,7 @@
    "id": "e1f9b4cd",
    "metadata": {},
    "source": [
-    "I will work work with a Time Series Data of Bitcoing prices taken from this recent Kaggle Competion and apply some of the most typical Feature Engineering to make it ready for any tabular Machine Learning Algorithm. And then I will apply XGBoost to come up with a Prediction of Bicoin Prices."
+    "I will work with Time Series Data of Bitcoin prices taken from this recent Kaggle competition and apply some of the most typical Feature Engineering to make it ready for any tabular Machine Learning Algorithm. And then I will apply XGBoost to come up with a Prediction of Bitcoin Prices."
    ]
   },
   {
@@ -2664,7 +2664,7 @@
    },
    "outputs": [],
    "source": [
-    "btc_shorter_df_for_training['time'] = btc_shorter_df_for_training.apply(lambda r:r.name, axis=1) # I need to move timestamp back into a column\n",
+    "btc_shorter_df_for_training['time'] = btc_shorter_df_for_training.apply(lambda r:r.name, axis=1) # move timestamp back into a column\n",
     "\n",
     "# and parse it into year, month, day and hour\n",
     "btc_shorter_df_for_training['year'] = [btc_shorter_df_for_training.iloc[i].time.year for i in range(len(btc_shorter_df_for_training))]  \n",
@@ -2976,7 +2976,7 @@
     }
    ],
    "source": [
-    "tmp = btc_shorter_df_for_training['Close'] # extract only the Close price\n",
+    "tmp = btc_shorter_df_for_training['Close']\n",
     "\n",
     "lag_df = pd.concat([tmp.shift(1, axis = 0), tmp], axis=1) # downward shift by 1 step \n",
     "\n",
