--- a/Finance_Stock_Crypto_Trading/Crypto_with_MachineLearning/Feature Engineering for Bitcoin Time Series and Price Prediction with XGBoost/G_Crypto_Kaggle_Feature Engineering_Time_Series_XGBoost.ipynb
+++ b/Finance_Stock_Crypto_Trading/Crypto_with_MachineLearning/Feature Engineering for Bitcoin Time Series and Price Prediction with XGBoost/G_Crypto_Kaggle_Feature Engineering_Time_Series_XGBoost.ipynb
@@ -140,10 +140,9 @@
     "start = time.time()\n",
     "\n",
     "main_full_df = pd.read_csv(os.path.join(ROOT_DIR, 'train.csv'))\n",
-    "# main_full_df = pd.read_csv(os.path.join(ROOT_DIR, 'train.csv'), nrows=10000)\n",
     "\n",
     "end = time.time()\n",
-    "print(end - start) # just ouf curiosity, see how long it takes to read such a large csv file"
+    "print(end - start)"
    ]
   },
   {
@@ -198,7 +197,7 @@
     "tags": []
    },
    "source": [
-    "## There are approximately 24 million observations in our time series."
+    "## So there are 24.2 million rows in our time series."
    ]
   },
   {
