--- a/Finance_Stock_Crypto_Trading/Crypto_with_MachineLearning/LGBM on TimeSeries Data of Cryptocurrency Prices.ipynb
+++ b/Finance_Stock_Crypto_Trading/Crypto_with_MachineLearning/LGBM on TimeSeries Data of Cryptocurrency Prices.ipynb
@@ -164,7 +164,9 @@
     "tags": []
    },
    "source": [
-    "## Reduce the memory footprint of this huge dataset"
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Reduce the memory footprint of this huge dataset</h3>\n",
+    "</div>"
    ]
   },
   {
@@ -1074,7 +1076,9 @@
     "tags": []
    },
    "source": [
-    "# Feature Engineering"
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Feature Engineering</h3>\n",
+    "</div>"
    ]
   },
   {
@@ -1517,7 +1521,11 @@
     "tags": []
    },
    "source": [
-    "# LightGBM\n",
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> LightGBM </h3>\n",
+    "</div>\n",
+    "\n",
+    "\n",
     "\n",
     "There are two ways to try out: full model (using all the crypto data at once) and individual model (model for each asset)."
    ]
@@ -1613,7 +1621,10 @@
    "source": [
     "Note again that what we are doing in this exercise is that - Compare two LGBM baselines, one that considers each asset independently and one multiple inputs that models all assets together.\n",
     "\n",
-    "# Train Full Model (i.e. a single Model File will be saved)"
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Train Full Model (i.e. a single Model File will be saved) </h3>\n",
+    "</div>\n",
+    "\n"
    ]
   },
   {
@@ -1757,7 +1768,9 @@
     "tags": []
    },
    "source": [
-    "# Train Individual Model (i.e. For each asset a Model File will be saved)"
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Train Individual Model (i.e. For each asset a Model File will be saved) </h3>\n",
+    "</div>"
    ]
   },
   {
@@ -1828,7 +1841,11 @@
     "tags": []
    },
    "source": [
-    "# Evaluation score - weighted correlation\n",
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Evaluation score - weighted correlation </h3>\n",
+    "</div>\n",
+    "\n",
+    "\n",
     "\n",
     "In the competition, your predictions will be evaluated on a weighted version of the Pearson correlation coefficient, with weights given by the Weight column in the Asset Details file.\n",
     "\n",
@@ -1918,7 +1935,10 @@
    "id": "17f1909e",
    "metadata": {},
    "source": [
-    "# Evaluating the Full Model"
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Evaluating the Full Model </h3>\n",
+    "</div>\n",
+    "\n"
    ]
   },
   {
