--- a/Finance_Stock_Crypto_Trading/Bitcoin Price Prediction with FB Prophet.ipynb
+++ b/Finance_Stock_Crypto_Trading/Bitcoin Price Prediction with FB Prophet.ipynb
@@ -409,7 +409,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Augmented Dickey-Fuller (ADF) Test \n",
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Augmented Dickey-Fuller (ADF) Test </h3>\n",
+    "</div>\n",
+    "\n",
+    "\n",
     "\n",
     "A time series is said to be “stationary” if it has no trend, exhibits constant variance over time, and has a constant autocorrelation structure over time.\n",
     "\n",
@@ -687,7 +691,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training The Model With Logistic Growth\n",
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Training The Model With Logistic Growth </h3>\n",
+    "</div>\n",
+    "\n",
     "\n",
     "The logistic growth model is more suitable for cases where the growth of the series is expected to slow down as it approaches a certain limit.\n",
     "\n",
