--- a/Finance_Stock_Crypto_Trading/Crypto_with_MachineLearning/LGBM on TimeSeries Data of Cryptocurrency Prices.ipynb
+++ b/Finance_Stock_Crypto_Trading/Crypto_with_MachineLearning/LGBM on TimeSeries Data of Cryptocurrency Prices.ipynb
@@ -1937,8 +1937,7 @@
    "source": [
     "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
     "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Evaluating the Full Model </h3>\n",
-    "</div>\n",
-    "\n"
+    "</div>"
    ]
   },
   {
@@ -2046,7 +2045,9 @@
    "id": "3c234e58",
    "metadata": {},
    "source": [
-    "# Evaluating the Individual Models"
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Evaluating the Individual Models </h3>\n",
+    "</div>"
    ]
   },
   {
